# Data-Structures-Algorithms

./: CMakeLists.txt  main.cpp  readme.md
Adhoc/: SpecialSubset.cpp
DynamicProgramming/: cses.cpp
DynamicProgramming/CSES/: ArrayDescription.cpp  BookShop.cpp  CoinCombinationsI.cpp  CoinCombinationsII.cpp  DiceCombinations.cpp  GridPaths.cpp  MinimizingCoins.cpp  RemovingDigits.cpp
GenericTrees/CSES/: Subordinates.cpp  TreeDiameter.cpp  TreeDistanceI.cpp  TreeDistanceII.cpp  TreeMatching.cpp  csesformat.cpp
GenericTrees/Learning/: LCA.cpp  Traversal.cpp
Graphs/CSES/: Monsters.cpp
Graphs/Learning/: AdjacencyListRep.cpp  AdjacencyMatrixRep.cpp  BFS.cpp  formatted.cpp
